# endcard

./: .replit  app.py  auth_utils.py  google_auth.py  main.py  models.py  pyproject.toml  replit.nix  requirements.txt  routes.py  stripe_handler.py
attached_assets/: Pasted-2025-05-15-12-13-47-34-ba79f407-User-File-home-runner-workspace-pythonlibs-lib-python3-11-site-pa-1747325664409.txt  Pasted-version-1-requires-python-3-11-package-name-blinker-version-1-9-0-source-re-1747081202301.txt  app.py  main.py  routes.py  stripe_handler.py  utils.py
static/css/: style.css
static/js/: main.js
templates/: history.html  index.html  upgrade.html
templates/endcard_templates/: template_landscape.html  template_portrait.html
