
[project]
name = "endcard-converter"
version = "0.1.0"
description = "EndCard Converter Pro"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.5.2",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "setuptools>=41.0.0",
    "packaging>=20.0"
]
